crates/fossil-hir/tests/snapshots/diagnostic_corpus__implicit_closure_synthesis_field_typo.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_db_wired_fixture(\"implicit_closure_synthesis\", \"field_typo\")"
---
# mode: Db-wired (production typecheck_mapping query)
# bucket: implicit_closure_synthesis
Error: `aeg` is not a field of `users`
  at 85..94
  label 85..94 (MappingRelative): here
  label 42..70 (FileAbsolute): `users` has the fields id, name, age
  help: did you mean `age`?
