crates/fossil-hir/tests/snapshots/diagnostic_corpus__implicit_closure_synthesis_type_mismatch_inside_body.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_csvw_fixture(\"implicit_closure_synthesis\", \"type_mismatch_inside_body\")"
---
# mode: Db-wired (production typecheck_mapping query)
# bucket: implicit_closure_synthesis
(no diagnostics emitted)
