crates/fossil-hir/tests/snapshots/diagnostic_corpus__shex_backward_check_optional_for_required.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_shex_fixture(\"shex_backward_check\", \"optional_for_required\")"
---
# mode: helper-proven (ShExDescriptor + ResolvedShape; resolve_target_shape
#       returns None in the production Db path until Phase 6 — see module docs)
# bucket: shex_backward_check
resolved constraints:
  https://example.org/email : String [OneOrMore]
lowering errors: (none)
