crates/fossil-hir/tests/snapshots/diagnostic_corpus__shex_backward_check_type_mismatch_two_span.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_shex_fixture(\"shex_backward_check\", \"type_mismatch_two_span\")"
---
# mode: helper-proven (ShExDescriptor + ResolvedShape; resolve_target_shape
#       returns None in the production Db path until Phase 6 — see module docs)
# bucket: shex_backward_check
resolved constraints:
  https://example.org/age : Integer [Exact(1)]
lowering errors: (none)
