crates/fossil-hir/tests/snapshots/diagnostic_corpus__shex_one_of_rejection_three_disjuncts.snap
---
source: crates/fossil-hir/tests/diagnostic_corpus.rs
expression: "run_shex_fixture(\"shex_one_of_rejection\", \"three_disjuncts\")"
---
# mode: helper-proven (ShExDescriptor + ResolvedShape; resolve_target_shape
#       returns None in the production Db path until Phase 6 — see module docs)
# bucket: shex_one_of_rejection
resolved constraints: (none — OneOf body, see rejection below)
OneOf rejection: 3 disjuncts in shape `http://example.org/Contact`
  disjunct predicates: http://example.org/email, http://example.org/phone, http://example.org/fax
  suggestion:
    Contact1 : ex:Contact from users
        iri = `${ex:}u/${.id}`
        <http://example.org/email> = .email
    
    Contact2 : ex:Contact from users
        iri = `${ex:}u/${.id}`
        <http://example.org/phone> = .phone
    
    Contact3 : ex:Contact from users
        iri = `${ex:}u/${.id}`
        <http://example.org/fax> = .fax
